add datasource application property outline

--- a/searchengine/src/main/resources/application.properties
+++ b/searchengine/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://{SUPABASE_URL}/{TABLE_NAME}
+spring.datasource.username=USERNAME
+spring.datasource.password=PASSWORD
+
+# Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
