--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
