--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.13",
     "@mui/x-data-grid": "^6.16.3",
+    "@mui/x-date-pickers": "^6.18.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.10",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
