--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate-docs": "jsdoc -c docs/conf.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
