Implemented GetFileObject with Jsch

--- a/searchengine/pom.xml
+++ b/searchengine/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.44-1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
