--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,6 +24,7 @@
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
