--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,11 +21,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
+    "extract-zip": "^2.0.1",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-viewer": "^1.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yauzl": "^2.10.0"
   },
   "eslintConfig": {
     "extends": [
